force-app/main/default/objects/Loan_Applicant_Group__c/Loan_Applicant_Group__c.object-meta.xml
<CustomObject>
    <label>Loan Applicant Group</label>
    <nameField>
        <label>Loan Applicant Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Applicant Group</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>