force-app/main/default/objects/Loan_Applicant_Group__c/fields/Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount__c</fullName>
    <complianceGroup>Source_Loan_Domain;Integrity_Accurate</complianceGroup>
    <description>Loan deposit amount</description>
    <label>Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>