force-app/main/default/objects/Loan_Applicant_Group__c/fields/Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Guarantor__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Loan Domain</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Boolean that captures guarantor</description>
    <label>Guarantor</label>
    <type>Checkbox</type>
</CustomField>