force-app/main/default/objects/Loan_Applicant_Group__c/fields/Loan_Applicant_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant_Group_ID__c</fullName>
    <complianceGroup>Source_Loan_Domain;Integrity_Accurate</complianceGroup>
    <description>Applicant Group ID consumed from the loan domain.</description>
    <externalId>true</externalId>
    <label>Loan Applicant Group ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>