force-app/main/default/objects/Loan_Applicant_Group__c/fields/Married_or_Defacto__c.field-meta.xml
<CustomField>
    <fullName>Married_or_Defacto__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Personal_Information;Source - Loan Domain</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Boolean that captures if the applicant  or applicants in the group are married or defacto</description>
    <label>Married or Defacto</label>
    <type>Checkbox</type>
</CustomField>