force-app/main/default/objects/Loan_Applicant_Group__c/fields/Number_of_Dependents__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dependents__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy_Non_Personal_Information;Source - Loan Domain</complianceGroup>
    <description>Number of Dependents for the applicant group</description>
    <label>Number of Dependents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>