force-app/main/default/objects/Loan_Applicant_Group__c/fields/Residential_Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Residential_Loan_Application__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Lookup to residential loan application.</description>
    <label>Loan Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Loan Applicant Groups</relationshipLabel>
    <relationshipName>Loan_Applicant_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>