force-app/main/default/objects/Loan_Applicant_Group__c/fields/SOP_ID__c.field-meta.xml
<CustomField>
    <fullName>SOP_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Customer SOP Id</description>
    <externalId>true</externalId>
    <label>SOP Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>