force-app/main/default/objects/Loan_Applicant_Group__c/fields/SOP_Version__c.field-meta.xml
<CustomField>
    <fullName>SOP_Version__c</fullName>
    <complianceGroup>Integrity_Accurate;Source_Loan_Domain</complianceGroup>
    <description>SOP version related to the SOP</description>
    <label>SOP Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>